--- a/web/css/style.css
+++ b/web/css/style.css
@@ -163,7 +163,9 @@ body{
     border-radius:5px 0 5px 5px;
     width:300px;
     box-shadow: 3px 4px 7px black;
-    padding:3px
+    padding:3px;
+    height: 500px;
+    overflow-y: scroll;
 }
 
 .info-body ul{
