--- a/web/css/style.css
+++ b/web/css/style.css
@@ -32,7 +32,7 @@ body{
 }
 
 .prompt{
-    height:100%;
+    height:375px;
     overflow-y: scroll;
     white-space: pre-wrap;
     overflow-wrap: break-word;
@@ -188,6 +188,12 @@ body{
 .editor .form-control{
     margin: 5px;
 }
+
+.string { color: teal; }
+.number { color: darkorange; }
+.boolean { color: blue; }
+.null { color: magenta; }
+.key { color: red; }
 
 @keyframes blink{
 0%{opacity: 0;}
